--- a/note.ipynb
+++ b/note.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "markdown",
    "id": "d1da4fa1",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Улыбаемся\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a9f5ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open \"./data\""
+   ]
   }
  ],
  "metadata": {
